# locus-prototype

./: .gitignore  AGENTS.md  Cargo.toml  Paradigms.md  README.md  TODO.md  rustc-ice-2026-05-08T10_35_39-3293166.txt
.cargo/: config.toml
.locus/: arch.json  lock.json
crates/locus-cli/: Cargo.toml
crates/locus-cli/src/: cli.rs  diff.rs  main.rs  semantic_facts.rs
crates/locus-cli/src/commands/: accept.rs  check.rs  debt.rs  emit_air.rs  explain.rs  init.rs  mod.rs  observe.rs  prune.rs  query.rs
crates/locus-cli/src/commands/paradigms/: ab.rs  bo.rs  cf.rs  cr.rs  cx.rs  da.rs  dc.rs  dg.rs  er.rs  fl.rs  fo.rs  mo.rs  mod.rs  ob.rs  pa.rs  rm.rs  rw.rs  ta.rs  ut.rs
crates/locus-cli/tests/: check_format.rs  check_semantic_rust.rs  governance_compat.rs  governance_diagnostics.rs  init_smoke.rs  observe_smoke.rs  query_smoke.rs
crates/locus-cli/tests/snapshots/: governance_compat__check_sample_crate.snap  governance_compat__check_sample_crate_agent_strict.snap  governance_diagnostics__check_dg_public_api.snap  init_smoke__init_cluster_crate.snap  init_smoke__init_sample_crate.snap  observe_smoke__observe_sample_crate.snap
crates/locus-core/: Cargo.toml
crates/locus-core/src/: architecture_tests.rs  diagnostics.rs  exceptions.rs  init.rs  lib.rs  loaders.rs  lockfile.rs  policy_guard.rs  policy_guard_tests.rs
crates/locus-core/src/architecture/: boundary.rs  concept.rs  contract.rs  converter.rs  debt.rs  facts.rs  mod.rs  module_ownership.rs  source.rs
crates/locus-core/src/governance/: arch.rs  decision.rs  evidence.rs  finding.rs  ids.rs  legacy.rs  mod.rs  paradigm.rs  paradigm_impls.rs  pipeline.rs  policy.rs  registry.rs  rule.rs
crates/locus-core/src/governance/policies/: concept_sot.rs  default.rs  mod.rs  registry_coherence.rs  registry_integrity.rs
crates/locus-core/src/governance/policies/concept_sot/: emit.rs  enforcement.rs  mod.rs  policy.rs
crates/locus-core/src/paradigms/: mod.rs
crates/locus-core/src/paradigms/abstraction_discipline/: edit.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/boundary_ownership/: edit.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/claim_ownership/: lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/complexity_budget/: edit.rs  init.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/complexity_budget/rules/: cx001.rs  cx002.rs  cx007.rs  cx008.rs  mod.rs
crates/locus-core/src/paradigms/composition_root/: edit.rs  init.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/config_data/: edit.rs  init.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/demand_driven/: edit.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/dependency_graph/: edit.rs  init.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/dependency_graph/rules/: dg001.rs  dg002.rs  dg003.rs  dg004.rs  helpers.rs  mod.rs
crates/locus-core/src/paradigms/documentation/: edit.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/error_taxonomy/: edit.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/failure_lineage/: edit.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/feature_ownership/: edit.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/module_ownership/: edit.rs  init.rs  lib_rs_kind.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/observability/: edit.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/one_truth/: accept.rs  infer.rs  init.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/port_adapter/: edit.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/responsibility/: edit.rs  init.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/runtime_work/: edit.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/test_architecture/: edit.rs  init.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/src/paradigms/utility_discipline/: edit.rs  init.rs  lockfile_schema.rs  mod.rs  rules.rs  rules_tests.rs
crates/locus-core/tests/: cl_claims.rs  dg_basic.rs  docs_drift.rs  governance_cx001_strangler.rs  governance_dg001_strangler.rs  governance_locus003_integration.rs  governance_locus004_integration.rs  governance_locus005_integration.rs  governance_ot002_strangler.rs  ot_basic.rs  semantic_provenance_spike.rs
crates/locus-rust/: Cargo.toml
crates/locus-rust-semantic/: Cargo.toml
crates/locus-rust-semantic/src/: lib.rs  test_backend.rs
crates/locus-rust-semantic/src/rustdoc_json/: backend.rs  cargo_invoke.rs  mod.rs  walk.rs
crates/locus-rust-semantic/tests/: rustdoc_json_smoke.rs
crates/locus-rust/src/: hints.rs  lib.rs  module_path.rs  type_render.rs  visitor.rs
crates/locus-rust/src/loaders/: markers.rs  mod.rs  std_rt.rs
crates/locus-rust/tests/: emit_air_basic.rs  emit_air_corpus.rs  semantic_boundary.rs
tests/fixtures/cl-claims/: Cargo.toml
tests/fixtures/cl-claims/src/: lib.rs
tests/fixtures/dg-public-api/: Cargo.toml
tests/fixtures/dg-public-api/.locus/: arch.json  lock.json
tests/fixtures/dg-public-api/src/: lib.rs
tests/fixtures/dg-public-api/src/feature_one/: api.rs  internals.rs  mod.rs
tests/fixtures/dg-public-api/src/feature_two/: handler.rs
tests/fixtures/markers-crate/: Cargo.toml
tests/fixtures/markers-crate/src/: lib.rs
tests/fixtures/sample-crate/: Cargo.toml
tests/fixtures/sample-crate/src/: dto.rs  handler.rs  identity.rs  lib.rs  shadow.rs
tests/fixtures/semantic-conversions-fixture/: Cargo.toml
tests/fixtures/semantic-conversions-fixture/src/: lib.rs
(+75 files in other folders)
