[package]
name = "locus-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "locus"
path = "src/main.rs"

[dependencies]
locus-air.workspace = true
locus-core.workspace = true
locus-rust.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
