[package]
name = "locus-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "locus"
path = "src/main.rs"

[dependencies]
locus-air.workspace = true
locus-core.workspace = true
locus-rust.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { workspace = true, features = ["filters"] }
