[package]
name = "locus-core"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
locus-air.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
indoc.workspace = true
locus-rust.workspace = true
tempfile = "3"
