[package]
name = "locus-rust-semantic"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
description = "Semantic Rust adapter for Locus — resolves names, types, traits via rust-analyzer's library crates. Spike (#111)."

[dependencies]
locus-air.workspace = true
thiserror.workspace = true

[dev-dependencies]
indoc.workspace = true
