[package]
name = "locus-rust"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
locus-air.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
walkdir.workspace = true
cargo_metadata.workspace = true
thiserror.workspace = true

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
serde_json.workspace = true
